--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     <div class="features">
         <div class="container">
             <div class="feet">
-                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <i class="fa-solid fa-wand-magic-sparkles fa-3x"></i>
                 <h3>tell us your idea</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur deleniti unde ab sequi. Ipsum, porro nam. Iure sint mollitia quaerat illo unde. Omnis aspernatur quae illo veritatis harum minus nihil.</p>
             </div>
                 <div class="feet">
-                <i class="fa-regular fa-gem"></i>
+                <i class="far fa-gem fa-3x"></i>
                 <h3>we will do all the work</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur deleniti unde ab sequi. Ipsum, porro nam. Iure sint mollitia quaerat illo unde. Omnis aspernatur quae illo veritatis harum minus nihil.</p>
             </div>
                 <div class="feet">
-                <i class="fa-solid fa-earth-europe"></i>
+                <i class="fa-solid fa-earth-europe fa-3x"></i>
                 <h3>your product is worldwide</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur deleniti unde ab sequi. Ipsum, porro nam. Iure sint mollitia quaerat illo unde. Omnis aspernatur quae illo veritatis harum minus nihil.</p>
             </div>
