--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>leon template one</title>
+    <link rel="stylesheet" href="Css/normalize.css">
+    <!-- FONT AWSOME LIBRARY -->
+    <link rel="stylesheet" href="Css/all.min.css">
     <!-- MAIN TEMPLATE CSS FILE -->
     <link rel="stylesheet" href="Css/leon.css">
     <!-- RENDER ALL ELEMENTS NORMALLY -->
-    <link rel="stylesheet" href="Css/normalize.css">
-    <!-- FONT AWSOME LIBRARY -->
-    <link rel="stylesheet" href="CSS/all.min.css">
+  
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
