--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="services-content">
                 <div class="col">
                     <div class="serv">
-                        <i class="fa-solid fa-print"></i>
+                        <i class="fa-solid fa-print fa-2x"></i>
                         <div class="text">
                             <h3>graphic design</h3>
                             <p>
@@ -83,7 +83,7 @@
                             </p></div>
                     </div>
                     <div class="serv">
-                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-message fa-2x"></i>
                         <div class="text">
                             <h3>UI & UX</h3>
                             <p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col">
                     <div class="serv">
-                        <i class="fa-solid fa-window-maximize"></i>
+                        <i class="fa-solid fa-window-maximize fa-2x"></i>
                         <div class="text">
                             <h3>web design</h3>
                             <p>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="serv">
-                        <i class="fa-solid fa-desktop"></i>
+                        <i class="fa-solid fa-desktop fa-2x"></i>
                         <div class="text">
                             <h3>web devlopment</h3>
                             <p>
@@ -113,6 +113,9 @@
                     </div>
                 </div>
                 <div class="col">
+                    <div class="image image-col">
+                        <img src="Images/serv2.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
