--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-image">
                     <div class="image image-col">
                         <img src="Images/serv2.jpg" alt="">
                     </div>
