--- a/index.html
+++ b/index.html
@@ -121,5 +121,36 @@
         </div>
     </div>
     <!-- End Services -->
+    <!-- Start Services -->
+    <div class="portfolio">
+        <div class="container">
+            <h2 class="special-heading">portfolio</h2>
+            <p>if you do it right, it will last forever</p>
+            <div class="portfolio-content">
+                <div class="card">
+                    <img src="Images/card1.jpg" alt="">
+                    <div class="info">
+                        <h3>project here</h3>
+                        <p>my creative ability is vey difficult to measure becuase it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="Images/card2.jpg" alt="">
+                    <div class="info">
+                        <h3>project here</h3>
+                        <p>my creative ability is vey difficult to measure becuase it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="Images/card4.jpg" alt="">
+                    <div class="info">
+                        <h3>project here</h3>
+                        <p>my creative ability is vey difficult to measure becuase it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services -->
 </body>
 </html>
