--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
     </div>
     <!-- End Services -->
-    <!-- Start Services -->
+    <!-- Start portfolio -->
     <div class="portfolio">
         <div class="container">
             <h2 class="special-heading">portfolio</h2>
@@ -151,6 +151,28 @@
             </div>
         </div>
     </div>
-    <!-- End Services -->
+    <!-- End portfolio -->
+    <!-- Start about -->
+    <div class="about">
+        <div class="container">
+            <h2 class="special-heading">about</h2>
+            <p>less is more work.</p>
+            <div class="about-content">
+                <div class="image">
+                    <img src="Images/about.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, aliquam in. Doloribus, culpa dolorem impedit iste, maxime ullam accusantium hic consequuntur similique voluptas dignissimos illum necessitatibus aperiam qui maiores nam!
+                    </p>
+                    <hr>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint maiores nisi, incidunt voluptatibus, consequuntur in ipsum animi rem quam tempore quia omnis unde temporibus enim quidem officia molestiae maxime soluta?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End about -->
 </body>
 </html>
