contact section & footer

--- a/index.html
+++ b/index.html
@@ -174,5 +174,29 @@
         </div>
     </div>
     <!-- End about -->
+    <!-- Start contact -->
+    <div class="contact">
+        <div class="container">
+            <div class="special-heading">contact</div>
+            <p>we are born to creat.</p>
+            <div class="info">
+                <p class="label">feel free to drop us a line at:</p>
+                <a href="mailto:leonagency@mail.com?subject=contact" class="link" target="_blank">leonagency@mail.com</a>
+                <div class="social">
+                    find us on social networks:
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End contact -->
+    <!-- Start footer -->
+    <div class="footer">
+        &copy; 2023 <span>leon</span>, all right reserved
+    </div>
+    <!-- End footer -->
 </body>
 </html>
