--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
             <p>we are born to creat.</p>
             <div class="info">
                 <p class="label">feel free to drop us a line at:</p>
-                <a href="mailto:leonagency@mail.com?subject=contact" class="link" target="_blank">leonagency@mail.com</a>
+                <a href="mailto:leonagency@mail.com?subject=contact" class="link" target="_blank"><span>leonagency@mail.com</span></a>
                 <div class="social">
                     find us on social networks:
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
+                    <a href="" class="links" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/leonagency/" class="links" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/leon_design_agency/?hl=en" class="links" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="links" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
         </div>
