--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <div class="header">
         <div class="container">
             <img class="logo" src="Images/logo.png" alt="">
-        <div class="links">
-            <span class="icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <ul>
-                <li><a href="#services">services</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#contact">contact</a></li>
-            </ul>
-        </div>
+            <div class="links">
+                <span class="icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <ul>
+                    <li><a href="#services">services</a></li>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- End Header -->
@@ -68,7 +68,7 @@
     </div>
     <!-- End features -->
     <!-- Start Services -->
-    <div class="Services">
+    <div class="Services" id="services">
         <div class="container">
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, Be productive</p>
@@ -122,7 +122,7 @@
     </div>
     <!-- End Services -->
     <!-- Start portfolio -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">portfolio</h2>
             <p>if you do it right, it will last forever</p>
@@ -153,7 +153,7 @@
     </div>
     <!-- End portfolio -->
     <!-- Start about -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <h2 class="special-heading">about</h2>
             <p>less is more work.</p>
@@ -175,7 +175,7 @@
     </div>
     <!-- End about -->
     <!-- Start contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <div class="special-heading">contact</div>
             <p>we are born to creat.</p>
