--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <!-- Start header -->
-    <div class="header">
+    <div class="header" id="header">
         <div class="container">
             <img class="logo" src="Images/logo.png" alt="">
             <div class="links">
@@ -64,6 +64,9 @@
                 <h3>your product is worldwide</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur deleniti unde ab sequi. Ipsum, porro nam. Iure sint mollitia quaerat illo unde. Omnis aspernatur quae illo veritatis harum minus nihil.</p>
             </div>
+        </div>
+        <div class="up">
+            <a href="#header"><i class="fa-solid fa-caret-up fa-2x"></i></a>
         </div>
     </div>
     <!-- End features -->
